# first-devschool-bot

./: README.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/api/: stubs.py  webserver.py
app/api/routes/: webhook.py
app/bot/: factory.py
app/bot/handlers/: __init__.py
app/bot/handlers/general/: handlerDownload.py  handlerFromUrl.py  handlerStart.py  handlerUpload.py
app/bot/keyboard/: __init__.py  downloadkb.py  kb.py
app/messages/: downloadmessages.py  env.py  start_message.py  uploadmessages.py
app/utils/: callback.py  commands.py  downloadfile.py
app/utils/states/: fileUpload.py  linkDownload.py
files/: aboba.txt  dontfuckthesystem.txt
